# search_engine_scraper

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  async_google_scraper.py  docker-compose.yml  google_scraper.py  install.sh  package-lock.json  pyproject.toml  requirements.txt  run.py  setup.py  simple_google_scraper.py
autoscraper/: __init__.py  app.py  cli.py  scraper.py  test_scraper.py
autoscraper/static/: __init__.py
autoscraper/static/css/: __init__.py  styles.css
autoscraper/static/frontend/: index.html
autoscraper/static/frontend/assets/: index-Be5NS41Z.js  index-C16M98Q_.css
autoscraper/static/js/: __init__.py  main.js
autoscraper/templates/: __init__.py  base.html  frontend.html  index.html  results.html
docs/html/: index.html
docs/images/: README.txt  logo.txt
examples/: README.md  __init__.py  send_emails.py  simple_search.py  web_interface.py
frontend/: copy-to-backend.js  install_frontend.sh  package-lock.json  package.json  tailwind.config.js  update_api_url.js
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: EmailButton.tsx  SearchForm.tsx
templates/: __init__.py  event_invitation_email.txt  introduction_email.txt  partnership_email.txt  service_offer_email.txt
