[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoscraper"
version = "1.0.0"
description = "Advanced Google scraper and business contact finder"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["scraper", "google", "contact finder", "email", "web scraping"]
dependencies = [
    "beautifulsoup4>=4.9.3",
    "aiohttp>=3.8.3",
    "requests>=2.26.0",
    "fastapi>=0.70.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.9.0",
    "lxml>=4.9.1",
    "html5lib>=1.1",
    "python-multipart>=0.0.5",
    "email-validator>=1.3.0",
    "jinja2>=3.1.2",
    "aiofiles>=23.1.0",
    "tqdm>=4.64.1",
    "python-dateutil>=2.8.2",
    "nest-asyncio>=1.5.6",
    "typer>=0.7.0",
    "rich>=13.3.5",
    "faker>=18.5.1",
    "tenacity>=8.2.2",
    "httpx>=0.24.1",
    "ujson>=5.8.0",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/yourusername/autoscraper"
"Bug Tracker" = "https://github.com/yourusername/autoscraper/issues"

[project.scripts]
autoscraper = "autoscraper.cli:main"

[tool.setuptools]
packages = ["autoscraper"]

[tool.setuptools.package-data]
autoscraper = [
    "static/css/*.css",
    "static/js/*.js",
    "templates/*.html",
] 